--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "@vercel/postgres": " ^0.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "date-fns": "^3.5.0",
     "lucide-react": "^0.344.0",
     "next": "^14.1.3",
     "next-themes": "^0.2.1",
     "react": "^18",
-    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-lightweight-calendar": "^1.3.6",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
