--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.344.0",
     "next": "^14.1.3",
+    "next-auth": "5.0.0-beta.16",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
